--- a/index.html
+++ b/index.html
@@ -41,13 +41,8 @@
 
   <section id="kontak">
     <h2>Kontak Saya</h2>
-    <form id="contactForm">
-      <input type="text" id="nama" placeholder="Nama Anda" required />
-      <input type="email" id="email" placeholder="Email Anda" required />
-      <textarea id="pesan" placeholder="Pesan" required></textarea>
-      <button type="submit">Kirim</button>
-    </form>
-    <p id="response"></p>
+<p>Email: <a href="mailto:haikalazizi13@gmail.com">haikalazizi13@gmail.com</a></p>
+<p>Email: <a href="mailto:082180755256">082180755256</a></p>
   </section>
 
   <footer>
